<resources>
    <string name="app_name">Swoosh</string>
    <string name="desired_league">Desired League:</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="mens">MENS</string>


    <string name="womens">WOMENS</string>

    <string name="co_ed">CO-ED</string>
    <string name="next">Next</string>
    <string name="backgroundimage">backgroundImage</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">On Going All Out</string>
    <string name="find_a_team_in_you_city_and_dominate_the_league">Find a Team in You City and Dominate the league</string>
    <string name="get_started">Get Started</string>
    <string name="swooshlogo">SwooshLogo</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">Finish</string>
    <string name="search_league">Looking for a co-ed beginner league near you</string>
</resources>
